# pyramid_google_login

./: .gitignore  .hgignore  .hgtags  .travis.yml  CHANGES.rst  README.rst  dev.yml  requirements-test.txt  requirements.txt  setup.cfg  setup.py  tox.ini
pyramid_google_login/: __init__.py  events.py  exceptions.py  google_oauth2.py  tests.py  utility.py  views.py
pyramid_google_login/static/: login.css
pyramid_google_login/templates/: signin.mako
pyramid_google_login/tests/: __init__.py
pyramid_google_login/tests/functional/: __init__.py  test_flow.py  test_utility.py
pyramid_google_login/tests/unittests/: test_google_oauth2.py  test_init.py  test_views.py
