[metadata]
name = pyramid_google_login
version = 0.4.0
author = Pior Bastida
author-email = pbastida@ludia.com
summary = Google Login for Pyramid
description-file = README.rst
home-page = https://bitbucket.org/Ludia/pyramid_google_login
license = BSD-derived (http://www.repoze.org/LICENSE.txt)
keywords = wsgi pylons pyramid auth authentication debug
classifier = 
	Development Status :: 4 - Beta
	Intended Audience :: Developers
	Programming Language :: Python
	Programming Language :: Python :: 2
	Programming Language :: Python :: 2.7
	Framework :: Pyramid
	Topic :: Internet :: WWW/HTTP :: WSGI
requires-dist = 
	pyramid_mako
	requests

[files]
packages = 
	pyramid_google_login
	pyramid_google_login.tests
	pyramid_google_login.tests.unittests
	pyramid_google_login.tests.functional
package_data = 
	pyramid_google_login =
	static/*.*
	templates/*.*

[noah]
public = True

[nosetests]
match = ^test
nocapture = 1
cover-package = pyramid_google_login
with-xcoverage = 1
with-xunit = 1
cover-erase = 1
verbosity = 3
with-id = 1
with-yanc = 1

