[metadata]
name = pyramid_google_login
version = 1.1.1.dev0
author = Pior Bastida
author-email = pior@pbastida.net
summary = Google Login for Pyramid
description-file = README.rst
home-page = https://github.com/ludia/pyramid_google_login
license = BSD-derived (http://www.repoze.org/LICENSE.txt)
keywords = google login wsgi pyramid auth authentication
classifier =
	Development Status :: 5 - Production/Stable
	Intended Audience :: Developers
	Programming Language :: Python
	Programming Language :: Python :: 2
	Programming Language :: Python :: 2.7
	Programming Language :: Python :: 3
	Programming Language :: Python :: 3.5
	Framework :: Pyramid
	Topic :: Internet :: WWW/HTTP :: WSGI
requires-dist =
	pyramid_mako
	requests
	six

[files]
packages =
	pyramid_google_login
	pyramid_google_login.tests
	pyramid_google_login.tests.unittests
	pyramid_google_login.tests.functional
package_data =
	pyramid_google_login =
	static/*.*
	templates/*.*

[noah]
public = True

[nosetests]
match = ^test
nocapture = 1
cover-package = pyramid_google_login
with-xcoverage = 1
with-xunit = 1
cover-erase = 1
verbosity = 3
with-id = 1
with-yanc = 1

[pylama]
paths = pyramid_google_login
format = pep8
